--- a/views/parts/crmAddClient.pug
+++ b/views/parts/crmAddClient.pug
@@ -44,7 +44,7 @@ form(action="/panel/add-client/" method='POST' class='particular-client-new')
         label(for="email") Email
         input(class='particular-client-new__par particular-client-new__email' name='email')
       .particular-client__div
-        label(for="consumption") Zużycie
+        label(for="consumption") Zużycie MWh
         input(class='particular-client-new__par particular-client-new__consumption' name='consumption')
     .particular-client__line-adress
       .particular-client__div
