add time to new task, now need to make backend endpoint and send data from front to back

--- a/public/stylesheets/modifiers/sass/_crm-panel.scss
+++ b/public/stylesheets/modifiers/sass/_crm-panel.scss
@@ -724,4 +724,17 @@
             border: 1px solid lightblue;
         }
     }
+
+    &__btn {
+        color: $heading-color;
+        @include main-border;
+        padding: 10px;
+        background-color: transparent;
+        width: 200px;
+        margin: 20px auto 0;
+
+        &:hover {
+            color: rgb(65, 126, 218);
+        }
+    }
 }
