--- a/views/parts/crmTaskWindow.pug
+++ b/views/parts/crmTaskWindow.pug
@@ -4,9 +4,11 @@ script(src="/MCDatepicker-master/dist/mc-calendar.min.js")
   i(class="fas fa-times-circle task-window__close")
   h1(class='task-window__title') Nowe Zadanie
   input(id='taskName' type="text" class='task-window__input' placeholder='nazwa zadania, np. Telefon')
+  input(id='taskNip' type="text" class='task-window__input' placeholder='nip')
   input(id='taskClientName' type="text" class='task-window__input' placeholder='nazwa klienta')
   .task-window__row
-    input(id='taskNip' type="text" class='task-window__input' placeholder='nip')
     input(id='taskTel' type="text" class='task-window__input' placeholder='nr tel.')
+    input(id='taskTime' type="time" class='task-window__input' value='12:00')
     input(id='taskDate' type="text" class='task-window__input' placeholder='data')  
   input(id='taskDescription' type="text" class='task-window__input' placeholder='Opis...')
+  button(class='task-window__btn') Utwórz
