add task inside client ok

--- a/public/stylesheets/modifiers/sass/_crm-panel.scss
+++ b/public/stylesheets/modifiers/sass/_crm-panel.scss
@@ -688,6 +688,7 @@
     display: none; // potem flex!
     flex-direction: column;
     min-height: 400px;
+    z-index: 3;
 
     &__close {
         align-self: flex-end;
