--- a/public/stylesheets/modifiers/sass/_crm-panel.scss
+++ b/public/stylesheets/modifiers/sass/_crm-panel.scss
@@ -743,3 +743,107 @@
         }
     }
 }
+
+//lista zadań
+
+.task-list {
+    position: fixed;
+    bottom: -100vh;
+    left: 50%;
+    transform: translateX(-50%);
+    min-height: 400px;
+    width: 80vw;
+    background: $basic-background;
+    @include main-border;
+    transition: .7s;
+    $body-bg: linear-gradient(180deg, #1c0138 0%, #2c0055 100%);
+    $border: linear-gradient(180deg, #ffdc2a 0%, #fb2182 41.54%);
+    @import url("https://fonts.googleapis.com/css2?family=Sacramento&display=swap");
+
+    .sun-container,
+    .sun-button,
+    .sun,
+    .sun-button span {
+        position: absolute;
+    }
+
+    .sun-container {
+        margin: auto;
+        right: 50%;
+        bottom: 0;
+        width: 55px;
+        height: 70px;
+        transform: translateX(-50%);
+
+        .wasa:hover {
+            .sun {
+                bottom: 25px;
+                transition: all 1s ease-in-out;
+                box-shadow: 0px 0px 10px #ffdc2a;
+            }
+
+            .sun-button {
+                box-shadow: 0px 0px 36px #c80de0;
+                transition: all 1s ease-in-out;
+                cursor: pointer;
+            }
+        }
+
+        .sun {
+            width: 64px;
+            height: 64px;
+            left: 55px;
+            bottom: 5px;
+            background: linear-gradient(180deg, #ffdc2a 0%, #fb2182 41.54%);
+            box-shadow: 0px 0px 36px #ffdc2a;
+            z-index: 2;
+            border-radius: 65px;
+            transition: all 1s ease-in-out;
+        }
+
+        .sun-button {
+            width: 171px;
+            height: 65px;
+            background: #2c0055;
+            box-shadow: 0px 0px 16px #c80de0;
+            border-radius: 2px;
+            z-index: 3;
+            border: 2px solid;
+            transition: all 1s ease-in-out;
+            border-image: linear-gradient(#360154, #d442d5) 30;
+
+            span {
+                text-align: center;
+                font-family: "Sacramento", cursive;
+                left: 56px;
+                font-size: 35px;
+                line-height: 70px;
+                margin: 0 auto;
+                transition: all 0.3s ease-in-out;
+                background: -webkit-linear-gradient(#ffdc2a, #fb2182);
+                -webkit-background-clip: text;
+                -webkit-text-fill-color: transparent;
+            }
+        }
+    }
+
+    &__hide {
+        color: #753ad5;
+        font-size: 30px;
+        position: absolute;
+        top: 5px;
+        right: 5px;
+        cursor: pointer;
+    }
+
+    &__title {
+        text-align: center;
+        color: $heading-color;
+        font-size: 30px;
+        letter-spacing: 3px;
+        margin-top: 5px;
+    }
+
+}
+
+// koniec lsita zadań
