--- a/views/crmPanel.pug
+++ b/views/crmPanel.pug
@@ -82,6 +82,7 @@ block content
            th Opiekun
        .doesnt-find-client
        include parts/crmAddClient
+       include parts/crmTaskList
        form(action="/panel/update-client/" method='POST' class='particular-client')         
          i(class="fas fa-times-circle particular-client__close")
          .particular-client__div.particular-client__div-owner
