--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -13,7 +13,7 @@ body {
     padding: 50px;
     font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
     // up świąteczny 
-    background: url('../images/lake.jpg');
+    background: #020024;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
