--- a/views/crmPanel.pug
+++ b/views/crmPanel.pug
@@ -83,6 +83,7 @@ block content
        .doesnt-find-client
        include parts/crmAddClient
        include parts/crmTaskList
+       include parts/crmTaskContainer
        form(action="/panel/update-client/" method='POST' class='particular-client')         
          i(class="fas fa-times-circle particular-client__close")
          .particular-client__div.particular-client__div-owner
