--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,6 +5,7 @@ html
     title= title
     link(rel='stylesheet', href='/css/style.min.css')  
     link(rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous")
+    link(rel="icon" href="/images/favicon.ico")
     script(src="https://kit.fontawesome.com/9d8f165f6b.js" crossorigin="anonymous")  
   body
     div(class="menu-mobile disabled")
