--- a/views/crmPanel.pug
+++ b/views/crmPanel.pug
@@ -15,7 +15,10 @@ block content
       .add-client-icon
         i(class="fas fa-user-plus add-client-icon__icon")
       .add-task-icon
-        i(class="fas fa-tasks add-task-icon__icon" data-task='standard')     
+        i(class="fas fa-tasks add-task-icon__icon" data-task='standard')
+      .go-to-ofertomat-icon
+        a(href="panel/ofertomat")
+          i(class="fas fa-coins go-to-ofertomat-icon__icon")     
      .search
       select(class='search__select-option')
         option(value="nip") NIP
