--- a/views/parts/b11.pug
+++ b/views/parts/b11.pug
@@ -1,12 +1,12 @@
 - var dataNumber = 8
 .extra-tariff-wrapper.tariffb11-wrapper
       p(class="tariff-wrapper-title-main") B11   
-      div
-        label Cena 2023r.
-        input(type="text" placeholder="np. 300" value=data[dataNumber].tariff.price2023)      
-      div
-        label Cena 2022r.
-        input(type="text" placeholder="np. 300" value=data[dataNumber].tariff.price2022)
-      div
-        label Cena 2021r.
-        input(type="text" placeholder="np. 300" value=data[dataNumber].tariff.price2021)   
+      //- div
+      //-   label Cena 2023r.
+      //-   input(type="text" placeholder="np. 300" value=data[dataNumber].tariff.price2023)      
+      //- div
+      //-   label Cena 2022r.
+      //-   input(type="text" placeholder="np. 300" value=data[dataNumber].tariff.price2022)
+      //- div
+      //-   label Cena 2021r.
+      //-   input(type="text" placeholder="np. 300" value=data[dataNumber].tariff.price2021)   
