--- a/views/parts/b22.pug
+++ b/views/parts/b22.pug
@@ -1,37 +1,37 @@
 - var dataNumber = 7
 .extra-tariff-wrapper.tariffb22-wrapper
       p(class="tariff-wrapper-title-main") B22 
-      .wrap-all-in-tariff
-        .year2023-wrapper 
-          p(class="tariff-wrapper-title") 2023 r. 
-          div
-            label Średnia 
-            input(type="text" placeholder="np. 300" value=data[dataNumber].tariff.price2023.avr)
-          div
-            label I strefa 
-            input(type="text" placeholder="np. 300" value=data[dataNumber].tariff.price2023.first)
-          div
-            label II strefa
-            input(type="text" placeholder="np. 300" value=data[dataNumber].tariff.price2023.second)
-        .year2022-wrapper 
-          p(class="tariff-wrapper-title") 2022 r. 
-          div
-            label Średnia 
-            input(type="text" placeholder="np. 300" value=data[dataNumber].tariff.price2022.avr)
-          div
-            label I strefa 
-            input(type="text" placeholder="np. 300" value=data[dataNumber].tariff.price2022.first)
-          div
-            label II strefa
-            input(type="text" placeholder="np. 300" value=data[dataNumber].tariff.price2022.second)
-        .year2021-wrapper 
-          p(class="tariff-wrapper-title") 2021 r.
-          div
-            label Średnia 
-            input(type="text" placeholder="np. 300" value=data[dataNumber].tariff.price2021.avr)
-          div
-            label I strefa 
-            input(type="text" placeholder="np. 300" value=data[dataNumber].tariff.price2021.first)
-          div
-            label II strefa
-            input(type="text" placeholder="np. 300" value=data[dataNumber].tariff.price2021.second)        
+      //- .wrap-all-in-tariff
+      //-   .year2023-wrapper 
+      //-     p(class="tariff-wrapper-title") 2023 r. 
+      //-     div
+      //-       label Średnia 
+      //-       input(type="text" placeholder="np. 300" value=data[dataNumber].tariff.price2023.avr)
+      //-     div
+      //-       label I strefa 
+      //-       input(type="text" placeholder="np. 300" value=data[dataNumber].tariff.price2023.first)
+      //-     div
+      //-       label II strefa
+      //-       input(type="text" placeholder="np. 300" value=data[dataNumber].tariff.price2023.second)
+      //-   .year2022-wrapper 
+      //-     p(class="tariff-wrapper-title") 2022 r. 
+      //-     div
+      //-       label Średnia 
+      //-       input(type="text" placeholder="np. 300" value=data[dataNumber].tariff.price2022.avr)
+      //-     div
+      //-       label I strefa 
+      //-       input(type="text" placeholder="np. 300" value=data[dataNumber].tariff.price2022.first)
+      //-     div
+      //-       label II strefa
+      //-       input(type="text" placeholder="np. 300" value=data[dataNumber].tariff.price2022.second)
+      //-   .year2021-wrapper 
+      //-     p(class="tariff-wrapper-title") 2021 r.
+      //-     div
+      //-       label Średnia 
+      //-       input(type="text" placeholder="np. 300" value=data[dataNumber].tariff.price2021.avr)
+      //-     div
+      //-       label I strefa 
+      //-       input(type="text" placeholder="np. 300" value=data[dataNumber].tariff.price2021.first)
+      //-     div
+      //-       label II strefa
+      //-       input(type="text" placeholder="np. 300" value=data[dataNumber].tariff.price2021.second)        
