--- a/views/parts/c12b.pug
+++ b/views/parts/c12b.pug
@@ -1,36 +1,36 @@
 .extra-tariff-wrapper.tariffc12b-wrapper
       p(class="tariff-wrapper-title-main") C12b 
-      .wrap-all-in-tariff
-        .year2023-wrapper 
-          p(class="tariff-wrapper-title") 2023 r. 
-          div
-            label Średnia 
-            input(id="priceC12b2023Avr" type="text" placeholder="np. 300" value=data[2].tariff.price2023.avr)
-          div
-            label I strefa 
-            input(id="priceC12b2023First" type="text" placeholder="np. 300" value=data[2].tariff.price2023.first)
-          div
-            label II strefa
-            input(id="priceC12b2023Second" type="text" placeholder="np. 300" value=data[2].tariff.price2023.second)
-        .year2022-wrapper 
-          p(class="tariff-wrapper-title") 2022 r. 
-          div
-            label Średnia 
-            input(id="priceC12b2022Avr" type="text" placeholder="np. 300" value=data[2].tariff.price2022.avr)
-          div
-            label I strefa 
-            input(id="priceC12b2022First" type="text" placeholder="np. 300" value=data[2].tariff.price2022.first)
-          div
-            label II strefa
-            input(id="priceC12b2022Second" type="text" placeholder="np. 300" value=data[2].tariff.price2022.second)
-        .year2021-wrapper 
-          p(class="tariff-wrapper-title") 2021 r.
-          div
-            label Średnia 
-            input(id="priceC12b2021Avr" type="text" placeholder="np. 300" value=data[2].tariff.price2021.avr)
-          div
-            label I strefa 
-            input(id="priceC12b2021First" type="text" placeholder="np. 300" value=data[2].tariff.price2021.first)
-          div
-            label II strefa
-            input(id="priceC12b2021Second" type="text" placeholder="np. 300" value=data[2].tariff.price2021.second)        
+      //- .wrap-all-in-tariff
+      //-   .year2023-wrapper 
+      //-     p(class="tariff-wrapper-title") 2023 r. 
+      //-     div
+      //-       label Średnia 
+      //-       input(id="priceC12b2023Avr" type="text" placeholder="np. 300" value=data[2].tariff.price2023.avr)
+      //-     div
+      //-       label I strefa 
+      //-       input(id="priceC12b2023First" type="text" placeholder="np. 300" value=data[2].tariff.price2023.first)
+      //-     div
+      //-       label II strefa
+      //-       input(id="priceC12b2023Second" type="text" placeholder="np. 300" value=data[2].tariff.price2023.second)
+      //-   .year2022-wrapper 
+      //-     p(class="tariff-wrapper-title") 2022 r. 
+      //-     div
+      //-       label Średnia 
+      //-       input(id="priceC12b2022Avr" type="text" placeholder="np. 300" value=data[2].tariff.price2022.avr)
+      //-     div
+      //-       label I strefa 
+      //-       input(id="priceC12b2022First" type="text" placeholder="np. 300" value=data[2].tariff.price2022.first)
+      //-     div
+      //-       label II strefa
+      //-       input(id="priceC12b2022Second" type="text" placeholder="np. 300" value=data[2].tariff.price2022.second)
+      //-   .year2021-wrapper 
+      //-     p(class="tariff-wrapper-title") 2021 r.
+      //-     div
+      //-       label Średnia 
+      //-       input(id="priceC12b2021Avr" type="text" placeholder="np. 300" value=data[2].tariff.price2021.avr)
+      //-     div
+      //-       label I strefa 
+      //-       input(id="priceC12b2021First" type="text" placeholder="np. 300" value=data[2].tariff.price2021.first)
+      //-     div
+      //-       label II strefa
+      //-       input(id="priceC12b2021Second" type="text" placeholder="np. 300" value=data[2].tariff.price2021.second)        
