--- a/views/parts/c21.pug
+++ b/views/parts/c21.pug
@@ -1,11 +1,11 @@
 .extra-tariff-wrapper.tariffc21-wrapper
       p(class="tariff-wrapper-title-main") C21     
-      div
-        label Cena 2023r.
-        input(id="priceC212023" type="text" placeholder="np. 300" value=data[3].tariff.price2023)    
-      div
-        label Cena 2022r.
-        input(id="priceC212022" type="text" placeholder="np. 300" value=data[3].tariff.price2022)
-      div
-        label Cena 2021r.
-        input(id="priceC212021" type="text" placeholder="np. 300" value=data[3].tariff.price2021)     
+      //- div
+      //-   label Cena 2023r.
+      //-   input(id="priceC212023" type="text" placeholder="np. 300" value=data[3].tariff.price2023)    
+      //- div
+      //-   label Cena 2022r.
+      //-   input(id="priceC212022" type="text" placeholder="np. 300" value=data[3].tariff.price2022)
+      //- div
+      //-   label Cena 2021r.
+      //-   input(id="priceC212021" type="text" placeholder="np. 300" value=data[3].tariff.price2021)     
