front gets good prices

--- a/views/ofertomat.pug
+++ b/views/ofertomat.pug
@@ -150,14 +150,14 @@ block content
       p(class="tariff-wrapper-title") Zużycie:
       .intake-divs-wrapper   
         div
-          label(for="wearFirst") I strefa: 
-          input(id="wearFirst" class="note-remover set-to-zero" type="text" placeholder="np. 7.3" value=0)
+          label(for="wearFirstThreeSpheres") I strefa: 
+          input(id="wearFirstThreeSpheres" class="note-remover set-to-zero" type="text" placeholder="np. 7.3" value=0)
         div
-          label(for="wearSecond") II strefa: 
-          input(id="wearSecond" class="note-remover set-to-zero" type="text" placeholder="np. 18.3" value=0)
+          label(for="wearSecondThreeSpheres") II strefa: 
+          input(id="wearSecondThreeSpheres" class="note-remover set-to-zero" type="text" placeholder="np. 18.3" value=0)
         div
-          label(for="wearThird") III strefa: 
-          input(id="wearThird" class="note-remover set-to-zero" type="text" placeholder="np. 18.3" value=0)
+          label(for="wearThirdThreeSpheres") III strefa: 
+          input(id="wearThirdThreeSpheres" class="note-remover set-to-zero" type="text" placeholder="np. 20.5" value=0)
         div
           label(for="wearSum") Suma: 
           input(id="wearSum" class="note-remover set-to-zero" type="text" placeholder="wyliczę")      
@@ -177,13 +177,13 @@ block content
       p(class="tariff-wrapper-title") Twoja propozycja:
       .wrapPropositionsC23B23
         div
-          label(for="proposePriceFirst") I strefa
+          label(for="proposePriceFirstThreeSpheres") I strefa
           input(type="text" class="note-remover set-to-zero" id="proposePriceFirst" value=0)
         div
-          label(for="proposePriceSecond") II strefa
+          label(for="proposePriceSecondThreeSpheres") II strefa
           input(type="text" class="note-remover set-to-zero" id="proposePriceSecond" value=0)
         div
-          label(for="proposePriceThird") III strefa
+          label(for="proposePriceThirdThreeSpheres") III strefa
           input(type="text" class="note-remover set-to-zero" id="proposePriceThird" value=0)
       .wrap-checkbox
         label(for="onePriceForAll" class="label-for-one-price") Na płasko
